# rust-ibverbs

./: Cargo.toml  Makefile  README.md
application/: Cargo.toml
application/benches/: copy.rs  copy_async.rs  copy_blocking.rs  copy_non_blocking.rs  copy_threaded.rs  ideal.rs  ideal_blocking.rs  ideal_non_blocking.rs  naive.rs  naive_async.rs  naive_non_blocking.rs  naive_threaded.rs  pipeline.rs  pipeline_async.rs  pipeline_blocking.rs  pipeline_non_blocking.rs  pipeline_threaded.rs
application/src/: args.rs  bench.rs  client.rs  lib.rs  main.rs  server.rs
application/src/client/: copy.rs  copy_async.rs  copy_threaded.rs  ideal.rs  ideal_threaded.rs  lib.rs  mod.rs  naive.rs  naive_async.rs  naive_threaded.rs  pipeline.rs  pipeline_async.rs  pipeline_threaded.rs  simple.rs  split.rs
application/src/client/copy/: async.rs  blocking.rs  lib.rs  mod.rs  threaded.rs
application/src/client/ideal/: blocking.rs  lib.rs  threaded.rs
application/src/client/naive/: async.rs  blocking.rs  lib.rs  mod.rs  threaded.rs
application/src/client/pipeline/: async.rs  blocking.rs  lib.rs  mod.rs  threaded.rs
application/src/memory/: ideal.rs  jit.rs  mod.rs  pooled.rs
application/src/transfer/: copy.rs  mod.rs  pipeline.rs  simple.rs  split.rs
application/src/transfer/send_recv/: client.rs  mod.rs  server.rs
application/src/transfer/send_recv_read/: client.rs  mod.rs  server.rs
ibverbs/: Cargo.toml
ibverbs-perf/: Cargo.toml
ibverbs-perf/benches/: copy_async.rs  copy_blocking.rs  copy_non_blocking.rs  ideal_blocking.rs  ideal_non_blocking.rs  naive_async.rs  naive_blocking.rs  naive_non_blocking.rs  pipeline_async.rs  pipeline_blocking.rs  pipeline_non_blocking.rs
ibverbs-perf/src/: bench.rs  lib.rs  server.rs
ibverbs-perf/src/client/: lib.rs  mod.rs
ibverbs-perf/src/client/copy/: async.rs  blocking.rs  lib.rs  mod.rs  threaded.rs
ibverbs-perf/src/client/ideal/: blocking.rs  mod.rs
ibverbs-perf/src/client/naive/: async.rs  mod.rs  threaded.rs
ibverbs-perf/src/client/pipeline/: async.rs  blocking.rs  lib.rs  threaded.rs
ibverbs/benches/: mr.rs  qp.rs
ibverbs/examples/: loopback_send_recv.rs  loopback_write.rs
ibverbs/src/: lib.rs
zerocopy/: Cargo.toml
zerocopy-rdma/: Cargo.toml  sequence.txt
zerocopy-rdma/src/: async_cq.rs  client.rs  lib.rs  main.rs  memory.rs  protocol.rs  record.rs  server.rs  utils.rs
zerocopy-rdma/src/client/: client.rs  mod.rs
zerocopy-rdma/src/memory/: jit.rs  mod.rs  pool.rs
zerocopy-rdma/src/protocol/: mod.rs
zerocopy-rdma/src/rdma/: connection.rs  mod.rs  utils.rs  wr_dispatcher.rs
zerocopy-rdma/src/server/: mod.rs  server.rs
zerocopy-rdma/src/transfer/: mod.rs  read_write.rs  send_recv.rs  write.rs
zerocopy/src/: lib.rs
zerocopy/src/client/: client.rs  mod.rs
zerocopy/src/rdma/: connection.rs
zerocopy/src/server/: server.rs
zerocopy/src/utils/: json.rs
