[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
ibverbs = { path = "../ibverbs", features = ["serde"] }
hwlocality = "1.0.0-alpha.11"
clap = { version = "4.5.47", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = {version = "1.47.1", features = ["full"]}