[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
ibverbs = { path = "../ibverbs", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.47.1", features = ["full"] }
bytes = "1.10.1"
dashmap = "6.1.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
futures = "0.3.31"
hwlocality = { version = "1.0.0-alpha.11", optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

[features]
default = ["hwlocality"]

[[bench]]
name = "ideal"
harness = false

[[bench]]
name = "naive"
harness = false

[[bench]]
name = "copy"
harness = false

[[bench]]
name = "pipeline"
harness = false
