[package]
name = "zerocopy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
bytemuck = { version = "1.23.1", features = ["derive"] }
ibverbs = { path = "../ibverbs" }