[package]
name = "zerocopy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
ibverbs = { path = "../ibverbs" }
bytemuck = { version = "1.23.2", features = ["derive"] }
md-5 = "0.10.6"
tokio = { version = "1.47.1", features = ["full"] }
